--- a/trunk/etc/batchTool_Nt.env
+++ b/trunk/etc/batchTool_Nt.env
@@ -1,4 +1,5 @@
 systemDefaultCommand=
+pythonExe=mayapy
 openDirectoryInitialExt=['.ma','.mb','.shk']
 batchFileInitialName=mayaBatch.bat
 batchFileInitialDir=C:/temp
